<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Regiser_seller">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="BuyGO"
            android:textColor="@color/otherblue"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seller_panel"
            android:textColor="@color/otherblue"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />


        <EditText
            android:layout_width="match_parent"
            android:hint="@string/store_name"
            android:id="@+id/seller_name"
            android:background="@drawable/edit_text"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:drawableEnd="@drawable/ic_account_circle_f_ll0_wght400_grad0_opsz24"
            android:inputType="textPersonName" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />



        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edit_text"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="@string/mail"
            android:id="@+id/seller_email"
            android:drawableEnd="@drawable/ic_baseline_email_24"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />


        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/edit_text"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/seller_password"
            android:padding="15dp"
            android:drawableEnd="@drawable/password_eye"
            android:inputType="textPassword" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/seller_register"
            android:onClick="seller_register"
            android:backgroundTint="@color/otherblue"
            android:text="@string/register"
            app:cornerRadius="32dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/have_account"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/seller_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="1"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@color/otherblue"
                android:textStyle="bold"
                tools:ignore="OnClick" />

        </LinearLayout>




    </LinearLayout>




</RelativeLayout>