<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAddressActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_address"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="90dp"
        >



        <EditText
            android:id="@+id/add_address_name"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:inputType="text"
            android:hint="@string/name"
            tools:ignore="MissingConstraints">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >


        <EditText
            android:id="@+id/add_address_lane"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:inputType="text"
            android:hint="@string/address_lane"
            tools:ignore="MissingConstraints">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >


        <EditText
            android:id="@+id/add_address_city"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:inputType="text"
            android:hint="@string/city"
            tools:ignore="MissingConstraints">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >


        <EditText
            android:id="@+id/add_address_postal"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:inputType="number"
            android:hint="@string/postal"
            tools:ignore="MissingConstraints">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp"
        >


        <EditText
            android:id="@+id/add_address_phone"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:inputType="number"
            android:hint="@string/phone"
            tools:ignore="MissingConstraints">

        </EditText>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton

        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/diagnose"
        android:layout_gravity="center"
        android:text="@string/add_address"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/otherblue"
        android:layout_marginTop="60dp"
        >
    </androidx.appcompat.widget.AppCompatButton>


</LinearLayout>