<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="BuyGO"
            android:textColor="@color/otherblue"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableEnd="@drawable/ic_account_circle_f_ll0_wght400_grad0_opsz24"
            android:hint="email"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />


        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:drawableEnd="@drawable/password_eye"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/otherblue"
            android:text="@string/login"
            android:onClick="login"
            app:cornerRadius="32dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/havent_account"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="1"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="@color/otherblue"
                android:textStyle="bold"
                tools:ignore="OnClick" />

        </LinearLayout>


    </LinearLayout>




</RelativeLayout>